--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,22 @@
     -->
     <title>React App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+      // Принудительная инвалидация кэша при обновлении версии
+      // Обновляйте версию при каждом деплое
+      const APP_VERSION = '1.0.0';
+      const storedVersion = localStorage.getItem('app_version');
+      
+      if (storedVersion && storedVersion !== APP_VERSION) {
+        // Версия изменилась - очищаем кэш и перезагружаем
+        localStorage.clear();
+        sessionStorage.clear();
+        // Принудительная перезагрузка без кэша
+        window.location.reload(true);
+      } else if (APP_VERSION) {
+        localStorage.setItem('app_version', APP_VERSION);
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
